--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,41 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+#top {
+    background-color: black;
+    width: 10px;
+    height: 70px;
+    margin-left: 82px;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+#container {
+    background-color: black;
+    width: 70px;
+    height: 178px;
+    margin-left: 50px;
+    padding: 7px;
+    border-radius: 10px;
+}
+.light {
+    width: 50px;
+    height: 50px;
+    margin: auto;
+    border-radius: 50%;
+    padding: 4px;
+    cursor: pointer;
+}
 
-*/
+.redlight {
+    background-color: red;
+}
+
+.yellowlight {
+    background-color: yellow;
+}
+
+.greenlight {
+    background-color: green;
+}
+
+.glow {
+    box-shadow: darkkhaki 0px 0px 50px 20px;
+}
