--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,41 +1,28 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-#top {
+.tl-box {
+    height: 100%;
+};
+
+.bolster {
+    width: 20px;
+    height: 75px;
     background-color: black;
-    width: 10px;
-    height: 70px;
-    margin-left: 82px;
-}
+};
 
-#container {
+.tl-body {
     background-color: black;
-    width: 70px;
-    height: 178px;
-    margin-left: 50px;
-    padding: 7px;
-    border-radius: 10px;
-}
-.light {
-    width: 50px;
-    height: 50px;
-    margin: auto;
-    border-radius: 50%;
-    padding: 4px;
-    cursor: pointer;
+    border-radius: 15px;
 }
 
-.redlight {
-    background-color: red;
+.tl-body > div {
+    width: 150px;
+    height: 150px;
+    border-radius: 150px;
+    margin: 15px 10px;
 }
 
-.yellowlight {
-    background-color: yellow;
-}
-
-.greenlight {
-    background-color: green;
-}
-
-.glow {
-    box-shadow: darkkhaki 0px 0px 50px 20px;
-}
+.red-light {background-color: red};
+.yellow-light {background-color: yellow};
+.green-light{background-color: green};
+.glow {box-shadow: rgb(255, 251, 0) 0px 0px 50px 20px};
